--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^15.0.4",
     "@angular/platform-browser-dynamic": "^15.0.4",
     "@angular/router": "^15.0.4",
+    "@asymmetrik/ngx-leaflet": "^15.0.1",
     "leaflet": "^1.9.3",
     "primeflex": "^3.3.0",
     "rxjs": "~7.5.0",
