--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -6,5 +6,6 @@
   "singleQuote": true,
   "bracketSameLine": true,
   "bracketSpacing": true,
-  "trailingComma": "none"
+  "trailingComma": "none",
+  "endOfLine": "crlf"
 }
