--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "^15.0.4",
     "@asymmetrik/ngx-leaflet": "^15.0.1",
     "leaflet": "^1.9.3",
+    "ngx-mat-timepicker": "^15.1.2",
     "primeflex": "^3.3.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
