--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@angular/platform-browser-dynamic": "^15.0.4",
     "@angular/router": "^15.0.4",
     "@asymmetrik/ngx-leaflet": "^15.0.1",
+    "@ng-web-apis/common": "^2.1.0",
+    "@ng-web-apis/geolocation": "^2.0.0",
     "leaflet": "^1.9.3",
     "ngx-mat-timepicker": "^15.1.2",
     "primeflex": "^3.3.0",
